Fixed and tested compareTo() method